components/networking/ingress-nginx/cilium-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  ingress:
    # HTTP and HTTPS traffic from external clients and cluster nodes
    - fromEntities:
        - world
        - cluster
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    # Health checks and metrics
    - fromEntities:
        - host
        - remote-node
        - health
        - cluster
      toPorts:
        - ports:
            - port: "10254"
              protocol: TCP
  egress:
    # DNS resolution
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    # Kubernetes API server
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    # Forwarding traffic to backends across cluster
    - toEntities:
        - cluster
